fix: scrollable body on mobile during open sidemenu

--- a/src/app/app-common/page/page.component.scss
+++ b/src/app/app-common/page/page.component.scss
@@ -59,11 +59,11 @@
   .mat-drawer-inner-container {
     overflow-x: hidden;
 
-    div:nth-child(3) {
+    div:last-of-type {
       margin-bottom: 50px;
 
       @include to-xs {
-        margin-bottom: 60px;
+        margin-bottom: 40px;
       }
     }
   }
